fix(ui): Control panel alignment (#3650)
Fixes the alignment of buttons inside the control panel.

--- a/ui/less/containers.less
+++ b/ui/less/containers.less
@@ -157,6 +157,9 @@
     /* 32px tall controls. */
     height: 32px;
 
+    /* Consistent alignment of buttons. */
+    line-height: 0.5;
+
     /* Consistent margins (external) and padding (internal) between controls. */
     .bottom-panels-elements-margin();
 
